<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:id="@+id/layout"
    android:layout_marginTop="56dp">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/arsenal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arsenal"/>
        <CheckBox
            android:id="@+id/atletico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atletico"
            android:layout_marginTop="6dp" />
        <CheckBox
            android:id="@+id/barcelona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcelona"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/bayern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bayern"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/dortmund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dortmund"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/chelsea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chelsea"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/juventus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juventus"
            android:layout_marginTop="6dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/liverpool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liverpool"/>
        <CheckBox
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/united"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/united"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/psg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psg"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/spurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spurs"
            android:layout_marginTop="6dp"/>
    </LinearLayout>
</LinearLayout>
    <Button
        android:enabled="false"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/layout"
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:text="NEXT"
        android:textColor="#fff"
        android:backgroundTint="@color/colorGray"/>
</RelativeLayout>
