<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/layout"
        android:layout_marginTop="56dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/abhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abhi"/>
            <CheckBox
                android:id="@+id/bheegar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bheegar"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/chopra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chopra"
                android:layout_marginTop="6dp" />
            <CheckBox
                android:id="@+id/giri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giri"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/kumar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kumar"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/kumman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kumman"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/midhunji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midhunji"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/nikhil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nikhil"/>
            <CheckBox
                android:id="@+id/sanal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanal"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/sreeraj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sreeraj"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/sonu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sonu"
                android:layout_marginTop="6dp" />
            <CheckBox
                android:id="@+id/thamizh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thamizh"
                android:layout_marginTop="6dp"/>
            <CheckBox
                android:id="@+id/vivek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vivek"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:enabled="false"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/layout"
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:text="SUBMIT"
        android:textColor="#fff"
        android:backgroundTint="@color/colorGray"/>
</RelativeLayout>
